--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Vue Uikit Starter</title>
-    <link rel="stylesheet" href="/dist/css/app.css">
+    <link rel="stylesheet" href="/css/app.css">
 </head>
 
 <body>
     <div id="app"></div>
-    <script src="/dist/js/app.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
